--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <title>Classes</title>
    <link rel="icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
   <link rel="shortcut icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
   <div align="center">
@@ -93,10 +93,10 @@ function changeSplash(num) {
 }
 // credit to 3kh0 for the code :)
   </script>
-    <script src="uv/uv.bundle.js" defer></script>
-    <script src="uv/uv.config.js" defer></script>
-    <script src="index.js" defer></script>
-    <script src="/js/settings.js"></script>
-    <script src="/js/settings2.js"></script>
-  <script src="/js/ab.js"></script>
+    <script src="/static/uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/index.js" defer></script>
+    <script src="/static/js/settings.js"></script>
+    <script src="/static/js/settings2.js"></script>
+  <script src="/static/js/ab.js"></script>
 </html>
