--- a/static/settings.html
+++ b/static/settings.html
@@ -7,7 +7,7 @@
   <title>Settings</title>
   <link rel="icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
   <link rel="shortcut icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/style.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 body {
@@ -111,7 +111,7 @@ padding: 15px;
   </div>
 	  <button onclick="ab()" class="btn">About:Blank</button>
 </body>
-  <script src="js/settings.js"></script>
-    <script src="js/settings2.js"></script>
-  <script src="js/ab.js"></script>
+  <script src="/static/js/settings.js"></script>
+    <script src="/static/js/settings2.js"></script>
+  <script src="/static/js/ab.js"></script>
 </html>
