--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <title>Classes</title>
    <link rel="icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
   <link rel="shortcut icon" href="https://ssl.gstatic.com/classroom/favicon.png" />
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div align="center">
